# news

./: .gitignore  Cargo.toml  README.md
news-gui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
news-gui/src/: App.tsx  index.css  main.tsx
news-gui/src-tauri/: Cargo.toml  tauri.conf.json
news-gui/src-tauri/src/: main.rs
news-gui/src-tauri/src/core/: mod.rs
news-gui/src-tauri/src/rss/: mod.rs
news-gui/src/components/layout/: Layout.tsx
news-gui/src/components/main-display/: index.ts  main-display.tsx
news-gui/src/components/rss-feed-group/: index.ts  rss-feed-group.tsx
news-gui/src/components/settings-button/: index.ts  settings-button.tsx
news-gui/src/components/settings-dialog/: index.ts  settings-dialog.tsx
news-gui/src/components/sidebar/: sidebar.tsx
news-gui/src/components/theme-toggle/: theme-toggle.tsx
news-gui/src/hooks/feeds/: index.ts  use-feeds.tsx
news-gui/src/hooks/rss-items/: index.ts  use-rss-items.tsx
news-gui/src/hooks/theme-provider/: theme-provider.tsx
news-gui/src/lib/: types.ts  utils.ts
news-gui/src/lib/store/: store.ts
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/migrations/: 20240707230707_initialize_db.sql
shared/src/: lib.rs
shared/src/ai/: mod.rs
shared/src/db/: mod.rs
shared/src/news/: mod.rs
shared/src/rss_feeds/: mod.rs
