[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
rss = "2.0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
