[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
rss = "2.0.8"
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = {version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "macros"]}
thiserror = "1.0.61"
