[package]
name = "news-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

shared = { path = "../../shared" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
